// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`describe Computer Science Requirements 1`] = `
Array [
  Array [
    Array [
      Object {
        "description": "Computer Science Overview",
        "hour": 0,
        "type": "HEADER",
      },
      null,
      Array [
        Object {
          "classId": 1200,
          "subject": "CS",
          "type": "COURSE",
        },
        Object {
          "classId": 1210,
          "subject": "CS",
          "type": "COURSE",
        },
      ],
    ],
    Array [
      Object {
        "description": "Computer Science Fundamental Courses",
        "hour": 0,
        "type": "HEADER",
      },
      null,
      Array [
        Object {
          "courses": Array [
            Object {
              "classId": 1800,
              "description": "Discrete Structures",
              "subject": "CS",
              "type": "COURSE",
            },
            Object {
              "classId": 1802,
              "description": "Seminar for CS 1800",
              "subject": "CS",
              "type": "COURSE",
            },
            Object {
              "classId": 2500,
              "description": "Fundamentals of Computer Science 1",
              "subject": "CS",
              "type": "COURSE",
            },
            Object {
              "classId": 2501,
              "description": "Lab for CS 2500",
              "subject": "CS",
              "type": "COURSE",
            },
            Object {
              "classId": 2510,
              "description": "Fundamentals of Computer Science 2",
              "subject": "CS",
              "type": "COURSE",
            },
            Object {
              "classId": 2511,
              "description": "Lab for CS 2510",
              "subject": "CS",
              "type": "COURSE",
            },
          ],
          "type": "AND",
        },
        Object {
          "classId": 2810,
          "subject": "CS",
          "type": "COURSE",
        },
      ],
    ],
    Array [
      Object {
        "description": "Computer Science Required Courses",
        "hour": 0,
        "type": "HEADER",
      },
      null,
      Array [
        Object {
          "classId": 3000,
          "subject": "CS",
          "type": "COURSE",
        },
        Object {
          "courses": Array [
            Object {
              "classId": 3500,
              "description": "Object-Oriented Design",
              "subject": "CS",
              "type": "COURSE",
            },
            Object {
              "classId": 3501,
              "description": "Lab for CS 3500",
              "subject": "CS",
              "type": "COURSE",
            },
          ],
          "type": "AND",
        },
        Object {
          "classId": 3650,
          "subject": "CS",
          "type": "COURSE",
        },
        Object {
          "classId": 3800,
          "subject": "CS",
          "type": "COURSE",
        },
        Object {
          "courses": Array [
            Object {
              "classId": 4500,
              "subject": "CS",
              "type": "COURSE",
            },
            Object {
              "classId": 4530,
              "subject": "CS",
              "type": "COURSE",
            },
          ],
          "type": "OR",
        },
      ],
    ],
    Array [
      Object {
        "description": "Security Required Course",
        "hour": 0,
        "type": "HEADER",
      },
      null,
      Array [
        Array [
          Object {
            "description": "Complete one of the following:",
            "hour": 4,
            "parsedCount": 1,
            "type": "COMMENT_COUNT",
          },
          Array [
            Object {
              "classId": 2550,
              "subject": "CY",
              "type": "COURSE",
            },
            Object {
              "classId": 3740,
              "subject": "CY",
              "type": "COURSE",
            },
            Object {
              "classId": 4740,
              "subject": "CY",
              "type": "COURSE",
            },
          ],
        ],
      ],
    ],
    Array [
      Object {
        "description": "Presentation Requirement",
        "hour": 0,
        "type": "HEADER",
      },
      null,
      Array [
        Array [
          Object {
            "description": "Choose one:",
            "hour": 4,
            "parsedCount": 1,
            "type": "COMMENT_COUNT",
          },
          Array [
            Object {
              "classId": 1112,
              "subject": "COMM",
              "type": "COURSE",
            },
            Object {
              "classId": 1113,
              "subject": "COMM",
              "type": "COURSE",
            },
            Object {
              "classId": 1210,
              "subject": "COMM",
              "type": "COURSE",
            },
            Object {
              "classId": 1511,
              "subject": "COMM",
              "type": "COURSE",
            },
            Object {
              "classId": 1125,
              "subject": "THTR",
              "type": "COURSE",
            },
            Object {
              "classId": 1130,
              "subject": "THTR",
              "type": "COURSE",
            },
            Object {
              "classId": 1180,
              "subject": "THTR",
              "type": "COURSE",
            },
            Object {
              "classId": 2345,
              "subject": "THTR",
              "type": "COURSE",
            },
          ],
        ],
      ],
    ],
    Array [
      Object {
        "description": "Khoury Elective Courses",
        "hour": 0,
        "type": "HEADER",
      },
      Object {
        "description": "With adviser approval, directed study, research, project study, and appropriate graduate-level courses may also be taken as upper-division electives.",
        "hour": 0,
        "type": "COMMENT",
      },
      Array [
        Array [
          Object {
            "description": "Complete 8 credits of CS, CY, DS, or IS classes that are not already required. Choose courses within the following ranges:",
            "hour": 8,
            "parsedCount": 8,
            "type": "COMMENT_COUNT",
          },
          Array [
            Object {
              "exceptions": Array [
                Object {
                  "classId": 5010,
                  "subject": "CS",
                  "type": "COURSE",
                },
              ],
              "idRangeEnd": 9999,
              "idRangeStart": 2500,
              "subject": "CS",
              "type": "RANGE",
            },
            Object {
              "exceptions": Array [
                Object {
                  "classId": 4930,
                  "subject": "CY",
                  "type": "COURSE",
                },
              ],
              "idRangeEnd": 9999,
              "idRangeStart": 2000,
              "subject": "CY",
              "type": "RANGE",
            },
            Object {
              "exceptions": Array [
                Object {
                  "classId": 4900,
                  "subject": "DS",
                  "type": "COURSE",
                },
              ],
              "idRangeEnd": 9999,
              "idRangeStart": 2500,
              "subject": "DS",
              "type": "RANGE",
            },
            Object {
              "exceptions": Array [
                Object {
                  "classId": 4900,
                  "subject": "IS",
                  "type": "COURSE",
                },
              ],
              "idRangeEnd": 9999,
              "idRangeStart": 2000,
              "subject": "IS",
              "type": "RANGE",
            },
          ],
        ],
      ],
    ],
  ],
]
`;

exports[`describe Computer Science Writing Requirement 1`] = `
Array [
  Array [
    Array [
      Object {
        "description": "College Writing",
        "hour": 0,
        "type": "HEADER",
      },
      null,
      Array [
        Object {
          "classId": 1111,
          "subject": "ENGW",
          "type": "COURSE",
        },
      ],
    ],
    Array [
      Object {
        "description": "Advanced Writing in the Disciplines",
        "hour": 0,
        "type": "HEADER",
      },
      null,
      Array [
        Object {
          "courses": Array [
            Object {
              "classId": 3302,
              "subject": "ENGW",
              "type": "COURSE",
            },
            Object {
              "classId": 3315,
              "subject": "ENGW",
              "type": "COURSE",
            },
          ],
          "type": "OR",
        },
      ],
    ],
  ],
]
`;

exports[`describe Concentration in Artificial Intelligence 1`] = `
Array [
  Array [
    Array [
      Object {
        "classId": 4100,
        "subject": "CS",
        "type": "COURSE",
      },
      Object {
        "classId": 4400,
        "subject": "DS",
        "type": "COURSE",
      },
    ],
    Array [
      Array [
        Object {
          "description": "Complete two of the following courses not already taken:",
          "hour": 8,
          "parsedCount": 2,
          "type": "COMMENT_COUNT",
        },
        Array [
          Object {
            "classId": 4120,
            "subject": "CS",
            "type": "COURSE",
          },
          Object {
            "classId": 4150,
            "subject": "CS",
            "type": "COURSE",
          },
          Object {
            "classId": 4610,
            "subject": "CS",
            "type": "COURSE",
          },
          Object {
            "classId": 4200,
            "subject": "IS",
            "type": "COURSE",
          },
          Object {
            "classId": 4420,
            "subject": "DS",
            "type": "COURSE",
          },
          Object {
            "classId": 3466,
            "subject": "PSYC",
            "type": "COURSE",
          },
        ],
      ],
    ],
  ],
]
`;

exports[`describe Concentration in Foundations 1`] = `
Array [
  Array [
    Array [],
    Array [
      Array [
        Object {
          "description": "Complete two of the following:",
          "hour": 8,
          "parsedCount": 2,
          "type": "COMMENT_COUNT",
        },
        Array [
          Object {
            "courses": Array [
              Object {
                "classId": 2800,
                "subject": "CS",
                "type": "COURSE",
              },
              Object {
                "classId": 4820,
                "subject": "CS",
                "type": "COURSE",
              },
            ],
            "type": "OR",
          },
          Object {
            "courses": Array [
              Object {
                "classId": 4805,
                "subject": "CS",
                "type": "COURSE",
              },
              Object {
                "classId": 4810,
                "subject": "CS",
                "type": "COURSE",
              },
            ],
            "type": "OR",
          },
        ],
      ],
      Array [
        Object {
          "description": "Complete two of the following courses not already taken:",
          "hour": 8,
          "parsedCount": 2,
          "type": "COMMENT_COUNT",
        },
        Array [
          Object {
            "classId": 4805,
            "subject": "CS",
            "type": "COURSE",
          },
          Object {
            "classId": 4810,
            "subject": "CS",
            "type": "COURSE",
          },
          Object {
            "classId": 4820,
            "subject": "CS",
            "type": "COURSE",
          },
          Object {
            "classId": 4830,
            "subject": "CS",
            "type": "COURSE",
          },
          Object {
            "courses": Array [
              Object {
                "classId": 3950,
                "description": "Introduction to Computer Science Research",
                "subject": "CS",
                "type": "COURSE",
              },
              Object {
                "classId": 4950,
                "description": "Computer Science Research Seminar",
                "subject": "CS",
                "type": "COURSE",
              },
              Object {
                "classId": 4950,
                "description": "Computer Science Research Seminar",
                "subject": "CS",
                "type": "COURSE",
              },
            ],
            "type": "AND",
          },
          Object {
            "classId": 4770,
            "subject": "CY",
            "type": "COURSE",
          },
        ],
      ],
    ],
  ],
]
`;

exports[`describe Concentration in Human-Centered Computing 1`] = `
Array [
  Array [
    Array [
      Object {
        "classId": 4300,
        "subject": "IS",
        "type": "COURSE",
      },
      Object {
        "classId": 4800,
        "subject": "IS",
        "type": "COURSE",
      },
    ],
    Array [
      Array [
        Object {
          "description": "Complete two of the following courses not already taken:",
          "hour": 8,
          "parsedCount": 2,
          "type": "COMMENT_COUNT",
        },
        Array [
          Object {
            "classId": 2000,
            "subject": "IS",
            "type": "COURSE",
          },
          Object {
            "classId": 4120,
            "subject": "CS",
            "type": "COURSE",
          },
          Object {
            "classId": 4550,
            "subject": "CS",
            "type": "COURSE",
          },
          Object {
            "classId": 4200,
            "subject": "DS",
            "type": "COURSE",
          },
        ],
      ],
    ],
  ],
]
`;

exports[`describe Concentration in Software 1`] = `
Array [
  Array [
    Array [
      Object {
        "classId": 2800,
        "subject": "CS",
        "type": "COURSE",
      },
      Object {
        "classId": 3700,
        "subject": "CS",
        "type": "COURSE",
      },
      Object {
        "classId": 4400,
        "subject": "CS",
        "type": "COURSE",
      },
    ],
    Array [
      Array [
        Object {
          "description": "Complete one of the following courses not already taken:",
          "hour": 0,
          "parsedCount": 1,
          "type": "COMMENT_COUNT",
        },
        Array [
          Object {
            "classId": 3520,
            "subject": "CS",
            "type": "COURSE",
          },
          Object {
            "classId": 3620,
            "subject": "CS",
            "type": "COURSE",
          },
          Object {
            "classId": 4240,
            "subject": "CS",
            "type": "COURSE",
          },
          Object {
            "classId": 4410,
            "subject": "CS",
            "type": "COURSE",
          },
          Object {
            "classId": 4550,
            "subject": "CS",
            "type": "COURSE",
          },
          Object {
            "classId": 4820,
            "subject": "CS",
            "type": "COURSE",
          },
          Object {
            "classId": 4830,
            "subject": "CS",
            "type": "COURSE",
          },
        ],
      ],
    ],
  ],
]
`;

exports[`describe Concentration in Systems 1`] = `
Array [
  Array [
    Array [
      Object {
        "classId": 3700,
        "subject": "CS",
        "type": "COURSE",
      },
    ],
    Array [
      Array [
        Object {
          "description": "Complete one of the following courses not already taken:",
          "hour": 4,
          "parsedCount": 1,
          "type": "COMMENT_COUNT",
        },
        Array [
          Object {
            "classId": 3740,
            "subject": "CY",
            "type": "COURSE",
          },
          Object {
            "classId": 4740,
            "subject": "CY",
            "type": "COURSE",
          },
        ],
      ],
      Array [
        Object {
          "description": "Complete two of the following courses not already taken:",
          "hour": 8,
          "parsedCount": 2,
          "type": "COMMENT_COUNT",
        },
        Array [
          Object {
            "classId": 3520,
            "subject": "CS",
            "type": "COURSE",
          },
          Object {
            "classId": 4300,
            "subject": "CS",
            "type": "COURSE",
          },
          Object {
            "classId": 3740,
            "subject": "CY",
            "type": "COURSE",
          },
          Object {
            "classId": 4610,
            "subject": "CS",
            "type": "COURSE",
          },
          Object {
            "classId": 4710,
            "subject": "CS",
            "type": "COURSE",
          },
          Object {
            "classId": 4740,
            "subject": "CY",
            "type": "COURSE",
          },
        ],
      ],
    ],
  ],
]
`;

exports[`describe Required General Electives 1`] = `
Array [
  Array [
    Array [],
    Array [
      Array [
        Object {
          "description": "Complete 28 credits of general electives.",
          "hour": 28,
          "parsedCount": 28,
          "type": "COMMENT_COUNT",
        },
        Array [],
      ],
    ],
  ],
]
`;

exports[`describe Supporting Courses 1`] = `
Array [
  Array [
    Array [
      Object {
        "description": "Mathematics Courses",
        "hour": 0,
        "type": "HEADER",
      },
      null,
      Array [
        Object {
          "classId": 1341,
          "subject": "MATH",
          "type": "COURSE",
        },
        Object {
          "classId": 1365,
          "subject": "MATH",
          "type": "COURSE",
        },
      ],
    ],
    Array [
      Object {
        "description": "Computing and Social Issues",
        "hour": 0,
        "type": "HEADER",
      },
      null,
      Array [
        Array [
          Object {
            "description": "Complete one of the following:",
            "hour": 4,
            "parsedCount": 1,
            "type": "COMMENT_COUNT",
          },
          Array [
            Object {
              "classId": 2600,
              "subject": "AFAM",
              "type": "COURSE",
            },
            Object {
              "classId": 4170,
              "subject": "CY",
              "type": "COURSE",
            },
            Object {
              "classId": 5240,
              "subject": "CY",
              "type": "COURSE",
            },
            Object {
              "classId": 2150,
              "subject": "ENGL",
              "type": "COURSE",
            },
            Object {
              "classId": 2220,
              "subject": "HIST",
              "type": "COURSE",
            },
            Object {
              "classId": 2102,
              "subject": "INSH",
              "type": "COURSE",
            },
            Object {
              "courses": Array [
                Object {
                  "classId": 1300,
                  "subject": "IS",
                  "type": "COURSE",
                },
                Object {
                  "classId": 1300,
                  "subject": "PHIL",
                  "type": "COURSE",
                },
              ],
              "type": "OR",
            },
            Object {
              "classId": 1145,
              "subject": "PHIL",
              "type": "COURSE",
            },
            Object {
              "classId": 1280,
              "subject": "SOCL",
              "type": "COURSE",
            },
            Object {
              "classId": 2485,
              "subject": "SOCL",
              "type": "COURSE",
            },
            Object {
              "classId": 4528,
              "subject": "SOCL",
              "type": "COURSE",
            },
          ],
        ],
      ],
    ],
    Array [
      Object {
        "description": "Electrical Engineering",
        "hour": 0,
        "type": "HEADER",
      },
      null,
      Array [
        Object {
          "courses": Array [
            Object {
              "classId": 2322,
              "description": "Fundamentals of Digital Design and Computer Organization",
              "subject": "EECE",
              "type": "COURSE",
            },
            Object {
              "classId": 2323,
              "description": "Lab for EECE 2322",
              "subject": "EECE",
              "type": "COURSE",
            },
          ],
          "type": "AND",
        },
      ],
    ],
    Array [
      Object {
        "description": "Science Requirement",
        "hour": 0,
        "type": "HEADER",
      },
      null,
      Array [
        Array [
          Object {
            "description": "Complete two courses (and any required labs) from the following science categories:",
            "hour": 8,
            "parsedCount": 2,
            "type": "COMMENT_COUNT",
          },
          Array [
            Array [
              Object {
                "description": "Biology",
                "hour": 0,
                "type": "SUBHEADER",
              },
              Object {
                "courses": Array [
                  Object {
                    "classId": 1111,
                    "description": "General Biology 1",
                    "subject": "BIOL",
                    "type": "COURSE",
                  },
                  Object {
                    "classId": 1112,
                    "description": "Lab for BIOL 1111",
                    "subject": "BIOL",
                    "type": "COURSE",
                  },
                  Object {
                    "classId": 1113,
                    "description": "General Biology 2",
                    "subject": "BIOL",
                    "type": "COURSE",
                  },
                  Object {
                    "classId": 1114,
                    "description": "Lab for BIOL 1113",
                    "subject": "BIOL",
                    "type": "COURSE",
                  },
                  Object {
                    "classId": 2301,
                    "description": "Genetics and Molecular Biology",
                    "subject": "BIOL",
                    "type": "COURSE",
                  },
                  Object {
                    "classId": 2302,
                    "description": "Lab for BIOL 2301",
                    "subject": "BIOL",
                    "type": "COURSE",
                  },
                ],
                "type": "AND",
              },
            ],
            Array [
              Object {
                "description": "Chemistry",
                "hour": 0,
                "type": "SUBHEADER",
              },
              Object {
                "courses": Array [
                  Object {
                    "classId": 1211,
                    "description": "General Chemistry 1",
                    "subject": "CHEM",
                    "type": "COURSE",
                  },
                  Object {
                    "classId": 1212,
                    "description": "Lab for CHEM 1211",
                    "subject": "CHEM",
                    "type": "COURSE",
                  },
                  Object {
                    "classId": 1213,
                    "description": "Recitation for CHEM 1211",
                    "subject": "CHEM",
                    "type": "COURSE",
                  },
                  Object {
                    "classId": 1214,
                    "description": "General Chemistry 2",
                    "subject": "CHEM",
                    "type": "COURSE",
                  },
                  Object {
                    "classId": 1215,
                    "description": "Lab for CHEM 1214",
                    "subject": "CHEM",
                    "type": "COURSE",
                  },
                  Object {
                    "classId": 1216,
                    "description": "Recitation for CHEM 1214",
                    "subject": "CHEM",
                    "type": "COURSE",
                  },
                ],
                "type": "AND",
              },
            ],
            Array [
              Object {
                "description": "Geology/Environmental Science",
                "hour": 0,
                "type": "SUBHEADER",
              },
              Object {
                "courses": Array [
                  Object {
                    "classId": 1200,
                    "description": "Dynamic Earth",
                    "subject": "ENVR",
                    "type": "COURSE",
                  },
                  Object {
                    "classId": 1201,
                    "description": "Lab for ENVR 1200",
                    "subject": "ENVR",
                    "type": "COURSE",
                  },
                  Object {
                    "classId": 1202,
                    "description": "History of Earth and Life",
                    "subject": "ENVR",
                    "type": "COURSE",
                  },
                  Object {
                    "classId": 1203,
                    "description": "Interpreting Earth History",
                    "subject": "ENVR",
                    "type": "COURSE",
                  },
                  Object {
                    "classId": 1200,
                    "description": "Dynamic Earth",
                    "subject": "ENVR",
                    "type": "COURSE",
                  },
                  Object {
                    "classId": 1201,
                    "description": "Lab for ENVR 1200",
                    "subject": "ENVR",
                    "type": "COURSE",
                  },
                  Object {
                    "classId": 2310,
                    "description": "Earth Materials",
                    "subject": "ENVR",
                    "type": "COURSE",
                  },
                  Object {
                    "classId": 2311,
                    "description": "Lab for ENVR 2310",
                    "subject": "ENVR",
                    "type": "COURSE",
                  },
                  Object {
                    "classId": 2340,
                    "description": "Earth Landforms and Processes",
                    "subject": "ENVR",
                    "type": "COURSE",
                  },
                  Object {
                    "classId": 2341,
                    "description": "Lab for ENVR 2340",
                    "subject": "ENVR",
                    "type": "COURSE",
                  },
                  Object {
                    "classId": 3300,
                    "description": "Geographic Information Systems",
                    "subject": "ENVR",
                    "type": "COURSE",
                  },
                  Object {
                    "classId": 3301,
                    "description": "Lab for ENVR 3300",
                    "subject": "ENVR",
                    "type": "COURSE",
                  },
                  Object {
                    "classId": 4500,
                    "description": "Applied Hydrogeology",
                    "subject": "ENVR",
                    "type": "COURSE",
                  },
                  Object {
                    "classId": 4501,
                    "description": "Lab for ENVR 4500",
                    "subject": "ENVR",
                    "type": "COURSE",
                  },
                  Object {
                    "classId": 1202,
                    "description": "History of Earth and Life",
                    "subject": "ENVR",
                    "type": "COURSE",
                  },
                  Object {
                    "classId": 1203,
                    "description": "Interpreting Earth History",
                    "subject": "ENVR",
                    "type": "COURSE",
                  },
                  Object {
                    "classId": 5242,
                    "description": "Ancient Marine Life",
                    "subject": "ENVR",
                    "type": "COURSE",
                  },
                  Object {
                    "classId": 5243,
                    "description": "Lab for ENVR 5242",
                    "subject": "ENVR",
                    "type": "COURSE",
                  },
                ],
                "type": "AND",
              },
            ],
            Array [
              Object {
                "description": "Mathematics",
                "hour": 0,
                "type": "SUBHEADER",
              },
              Object {
                "classId": 1342,
                "subject": "MATH",
                "type": "COURSE",
              },
              Object {
                "classId": 2331,
                "subject": "MATH",
                "type": "COURSE",
              },
              Object {
                "classId": 3081,
                "subject": "MATH",
                "type": "COURSE",
              },
            ],
            Array [
              Object {
                "description": "Physics",
                "hour": 0,
                "type": "SUBHEADER",
              },
              Object {
                "courses": Array [
                  Object {
                    "classId": 1145,
                    "description": "Physics for Life Sciences 1",
                    "subject": "PHYS",
                    "type": "COURSE",
                  },
                  Object {
                    "classId": 1146,
                    "description": "Lab for PHYS 1145",
                    "subject": "PHYS",
                    "type": "COURSE",
                  },
                  Object {
                    "classId": 1147,
                    "description": "Physics for Life Sciences 2",
                    "subject": "PHYS",
                    "type": "COURSE",
                  },
                  Object {
                    "classId": 1148,
                    "description": "Lab for PHYS 1147",
                    "subject": "PHYS",
                    "type": "COURSE",
                  },
                  Object {
                    "classId": 1151,
                    "description": "Physics for Engineering 1",
                    "subject": "PHYS",
                    "type": "COURSE",
                  },
                  Object {
                    "classId": 1152,
                    "description": "Lab for PHYS 1151",
                    "subject": "PHYS",
                    "type": "COURSE",
                  },
                  Object {
                    "classId": 1153,
                    "description": "Interactive Learning Seminar for PHYS 1151",
                    "subject": "PHYS",
                    "type": "COURSE",
                  },
                  Object {
                    "classId": 1155,
                    "description": "Physics for Engineering 2",
                    "subject": "PHYS",
                    "type": "COURSE",
                  },
                  Object {
                    "classId": 1156,
                    "description": "Lab for PHYS 1155",
                    "subject": "PHYS",
                    "type": "COURSE",
                  },
                  Object {
                    "classId": 1157,
                    "description": "Interactive Learning Seminar for PHYS 1155",
                    "subject": "PHYS",
                    "type": "COURSE",
                  },
                  Object {
                    "classId": 1161,
                    "description": "Physics 1",
                    "subject": "PHYS",
                    "type": "COURSE",
                  },
                  Object {
                    "classId": 1162,
                    "description": "Lab for PHYS 1161",
                    "subject": "PHYS",
                    "type": "COURSE",
                  },
                  Object {
                    "classId": 1163,
                    "description": "Recitation for PHYS 1161",
                    "subject": "PHYS",
                    "type": "COURSE",
                  },
                  Object {
                    "classId": 1165,
                    "description": "Physics 2",
                    "subject": "PHYS",
                    "type": "COURSE",
                  },
                  Object {
                    "classId": 1166,
                    "description": "Lab for PHYS 1165",
                    "subject": "PHYS",
                    "type": "COURSE",
                  },
                  Object {
                    "classId": 1167,
                    "description": "Recitation for PHYS 1165",
                    "subject": "PHYS",
                    "type": "COURSE",
                  },
                ],
                "type": "AND",
              },
            ],
          ],
        ],
      ],
    ],
  ],
]
`;

exports[`parse and 1`] = `
Array [
  Object {
    "courses": Array [
      Object {
        "classId": 2500,
        "description": "",
        "subject": "CS",
        "type": "COURSE",
      },
      Object {
        "classId": 2501,
        "description": "",
        "subject": "CS",
        "type": "COURSE",
      },
      Object {
        "classId": 2510,
        "description": "",
        "subject": "CS",
        "type": "COURSE",
      },
      Object {
        "classId": 2511,
        "description": "",
        "subject": "CS",
        "type": "COURSE",
      },
      Object {
        "classId": 3500,
        "description": "",
        "subject": "CS",
        "type": "COURSE",
      },
      Object {
        "classId": 2501,
        "description": "",
        "subject": "CS",
        "type": "COURSE",
      },
    ],
    "type": "AND",
  },
]
`;

exports[`parse and and or 1`] = `
Array [
  Object {
    "courses": Array [
      Object {
        "classId": 2500,
        "subject": "CS",
        "type": "COURSE",
      },
      Object {
        "classId": 2501,
        "subject": "CS",
        "type": "COURSE",
      },
      Object {
        "classId": 2501,
        "subject": "CS",
        "type": "COURSE",
      },
    ],
    "type": "OR",
  },
  Object {
    "courses": Array [
      Object {
        "classId": 2500,
        "description": "",
        "subject": "CS",
        "type": "COURSE",
      },
      Object {
        "classId": 2501,
        "description": "",
        "subject": "CS",
        "type": "COURSE",
      },
      Object {
        "classId": 2510,
        "description": "",
        "subject": "CS",
        "type": "COURSE",
      },
      Object {
        "classId": 2511,
        "description": "",
        "subject": "CS",
        "type": "COURSE",
      },
      Object {
        "classId": 3500,
        "description": "",
        "subject": "CS",
        "type": "COURSE",
      },
      Object {
        "classId": 2501,
        "description": "",
        "subject": "CS",
        "type": "COURSE",
      },
    ],
    "type": "AND",
  },
]
`;
